--- a/vm.org
+++ b/vm.org
@@ -5,9 +5,13 @@ Root Token: e8ee2e1f-515b-535c-93d9-fe43867c97cf
 export VAULT_ADDR='http://127.0.0.1:8200'
 
 
+
 vault write secret/vpwmgr/user/psparks/network/router username="admin" password="admin" notes="Don't mess it up."
 vault write secret/vpwmgr/user/psparks/web/google username="user" password="userpw" notes="Check email"
 vault write secret/vpwmgr/user/psparks/web/netflix username="watcher" password="userpw" notes="Watch only your favorites."
+vault write secret/vpwmgr/user/psparks/Paul%27s%20Stuff%21/%24%2bdream username="admin" password="admin" notes="Don't mess it up."
+
+
 
 # Enable cross origin. TODO lock this down
 vault write sys/config/cors enabled=true allowed_origins='*'
